--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block title %}
-        <title> ШМГИПЦгокшпр39ш7гпецщрш8н94ц37е*?"ЕПа4шуцрщ </title>
+    <title>ШМГИПЦгокшпр39ш7гпецщрш8н94ц37е*?"ЕПа4шуцрщ</title>
     {% endblock title %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,7 +21,14 @@
       <!---->
       {% endblock content %}
     </main>
-    <footer>
+    <footer class="py-5 text-center">
+      <p class="bottom-text font-changer" style="bottom: 60px">
+        &#8595;Контакти
+      </p>
+      <p class="bottom-text font-changer" style="bottom: 40px">
+        За запитаннями - +0/0000000000
+      </p>
+      <p class="bottom-text font-changer">&copy; serg-nyk 2024</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
