--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #ebebeb;">
     <div class="container-fluid">
-      <img src="static/Logo.png">
+      <img src="static/img/Logo.png">
       <button
         class="navbar-toggler font-changer"
         type="button"
