--- a/templates/order-base-template.html
+++ b/templates/order-base-template.html
@@ -13,15 +13,13 @@
     <link rel="stylesheet" href="/static/style.css" />
   </head>
   <body>
-    <header>{% include 'menu.html' %}</header>
+    <header>{% include 'order-menu.html' %}</header>
     <main>
       {% block content %}
       <!---->
       {% endblock content %}
     </main>
     <footer class="py-5 text-center" style="border-radius: 25px 25px 0 0">
-      <p class="bottom-text font-changer">&#8595;Контакти</p>
-      <p class="bottom-text font-changer">За запитаннями - +0/0000000000</p>
       <p class="bottom-text font-changer">&copy; serg-nyk 2024</p>
       <p class="bottom-text font-changer">
         &copy; Проект зроблений у школі логіка
