--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,45 @@
 {% extends 'base_template.html' %} {% block content %}
-<div class="container">
-  {% for post in posts %} {% include 'shop_post_card.html' %} {% endfor %}
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <div class="carousel-inner py-5">
+    <div class="carousel-item active">
+      <img
+        src="static/img/boots.jpg"
+        class="d-block w-100 img-fluid product-img img-center" 
+        style="max-width: 80rem; height: auto"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+      src="static/img/shirt.jpg"
+      class="d-block w-100 img-fluid product-img img-center"
+      style="max-width: 80rem; height: 80rem;"
+      alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img
+      class="d-block w-100 img-fluid product-img img-center"
+      style="max-width: 80rem; height: auto"
+      alt="..." />
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleFade"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleFade"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 {% endblock content %}
