--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,58 +1,66 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #ebebeb;">
-    <div class="container-fluid">
-      <img src="static/img/Logo.png">
-      <button
-        class="navbar-toggler font-changer"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              style="text-indent: 25px;"
-              aria-current="page"
-              href="{{ url_for('index') }}"
-              >Головна сторінка</a
-            >
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Одяг
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('support') }}">Підтримка</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+<nav
+  class="navbar navbar-expand-lg"
+  style="background-color: #ebebeb; border-radius: 0 0 25px 25px"
+>
+  <div class="container-fluid">
+    <img src="/static/img/Logo.png" style="margin: right 100px" />
+    <button
+      class="navbar-toggler font-changer"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            style="text-indent: 25px"
+            aria-current="page"
+            href="{{ url_for('index') }}"
+            >Головна сторінка</a
+          >
+        </li>
+
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Каталог
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="{{ url_for('all_catalog') }}"
+                >Всі товари</a
+              >
+            </li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
+            {% for category in categories %}
+            <li>
+              <a
+                class="dropdown-item"
+                href="{{ url_for('catalog', category_id=category[0]) }}"
+                >{{category[1]}}</a
+              >
+            </li>
+            {% endfor %}
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('support') }}">Підтримка</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  
+  </div>
+</nav>
