--- a/templates/shop_post_card.html
+++ b/templates/shop_post_card.html
@@ -1,13 +1,17 @@
-<div class="card" style="width: 18rem">
-    <img
-      src="{{ url_for('static', filename='img/'+post[3]) }}"
-      class="card-img-top"
-      alt="..."
-    />
-    <div class="card-body">
-      <h5 class="card-title">{{post[1]}}</h5>
-      <p class="card-text">{{post[2]}}</p>
-      <a href="#" class="btn btn-primary">Читати</a>
-    </div>
+<div class="card" style="max-width: 18rem">
+  <img
+    src="{{ url_for('static', filename='img/'+product[3]) }}"
+    class="card-img-top"
+    alt="..."
+  />
+  <div class="card-body">
+    <h5 class="card-title">{{product[1]}}</h5>
+    <h3 class="card-text">{{product[7]}}</h3>
+    <p class="card-text">{{product[6]}} ₴</p>
+    <a
+      href="{{ url_for('product', product_id = product[0]) }}"
+      class="btn btn-primary"
+      >Купити</a
+    >
   </div>
-  
+</div>
