--- a/templates/shop_post_card.html
+++ b/templates/shop_post_card.html
@@ -1,4 +1,4 @@
-<div class="card" style="max-width: 18rem">
+<div class="card small-outline" style="max-width: 18rem">
   <img
     src="{{ url_for('static', filename='img/'+product[3]) }}"
     class="card-img-top"
