--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -19,7 +19,7 @@
       <!---->
       {% endblock content %}
     </main>
-    <footer class="py-5 text-center" style="border-radius: 25px 25px 0 0">
+    <footer class="py-5" style="border-radius: 25px 25px 0 0">
       <p class="bottom-text font-changer">&#8595;Контакти</p>
       <p class="bottom-text font-changer">За запитаннями - +0/0000000000</p>
       <p class="bottom-text font-changer">&copy; serg-nyk 2024</p>
