--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,32 @@
 {% extends 'base_template.html' %} {% block content %}
-<div id="carouselExampleFade" class="carousel slide carousel-fade">
-  <div class="carousel-inner py-5">
+<div id="carouselExampleFade" class="carousel slide carousel-fade py-5">
+  <div
+    class="carousel-inner py-5 product-img"
+    style="background-image: url('/static/img/background.jpg')"
+  >
     <div class="carousel-item active">
       <img
-        src="static/img/boots.jpg"
-        class="d-block w-100 img-fluid product-img img-center" 
-        style="max-width: 80rem; height: auto"
+        src="static/img/pants10-Glamorous_night_pants.jpeg"
+        class="d-block w-100 img-fluid product-img img-center"
+        style="max-width: 60rem; height: auto"
         alt="..."
       />
     </div>
     <div class="carousel-item">
       <img
-      src="static/img/shirt.jpg"
-      class="d-block w-100 img-fluid product-img img-center"
-      style="max-width: 80rem; height: 80rem;"
-      alt="..." />
+        src="static/img/shirt11-Urban_traveller.jpeg"
+        class="d-block w-100 img-fluid product-img img-center"
+        style="max-width: 60rem; height: auto"
+        alt="..."
+      />
     </div>
     <div class="carousel-item">
       <img
-      class="d-block w-100 img-fluid product-img img-center"
-      style="max-width: 80rem; height: auto"
-      alt="..." />
+        src="static/img/sweater6-mountain_wind.jpeg"
+        class="d-block w-100 img-fluid product-img img-center"
+        style="max-width: 60rem; height: auto"
+        alt="..."
+      />
     </div>
   </div>
   <button
