--- a/templates/order-base-template.html
+++ b/templates/order-base-template.html
@@ -20,7 +20,9 @@
       {% endblock content %}
     </main>
     <footer class="py-5 text-center" style="border-radius: 25px 25px 0 0">
-      <p class="bottom-text font-changer">&copy; serg-nyk 2024</p>
+      <p class="bottom-text font-changer">
+        &copy; serg-nyk 2024
+      </p>
       <p class="bottom-text font-changer">
         &copy; Проект зроблений у школі логіка
       </p>
