--- a/templates/menu.html
+++ b/templates/menu.html
@@ -60,6 +60,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('support') }}">Підтримка</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('about_us') }}">Про нас</a>
+        </li>
       </ul>
     </div>
   </div>
