--- a/templates/order-menu.html
+++ b/templates/order-menu.html
@@ -22,9 +22,10 @@
             class="nav-link active"
             style="text-indent: 25px"
             aria-current="page"
-            href="{{ url_for('index') }}"
+            href="{{ url_for('product', product_id = product[0]) }}"
             >Відмінити 🗙</a
           >
+        </li>
       </ul>
     </div>
   </div>
