--- a/templates/product.html
+++ b/templates/product.html
@@ -39,7 +39,7 @@
         <div class="container py-2">
           <div class="container">
             <a href="{{ url_for('order', product_id = product[0]) }}">
-              <button type="button" class="btn btn-primary small-outline">
+              <button type="button" class="btn btn-success small-outline">
                 Замовити
               </button>
             </a>
