--- a/templates/support.html
+++ b/templates/support.html
@@ -162,4 +162,37 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div
+    class="container product-img py-5"
+    style="background-image: url('/static/img/background.jpg')"
+  >
+    <div class="container product-img py-2" style="background-color: #ebebeb50">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Електронна адреса</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="name@example.com"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label"
+          >Повідомлення</label
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+          placeholder="Залишіть тут свій відгук чи повідомлення"
+        ></textarea>
+      </div>
+      <button type="button" class="btn btn-info">Надіслати</button>
+    </div>
+  </div>
+</div>
 {% endblock content %}
