--- a/templates/order-menu.html
+++ b/templates/order-menu.html
@@ -27,6 +27,10 @@
           >
         </li>
       </ul>
+      <div>
+        <p>+0/0000000000</p>
+        <p>Звоніть з 9:00 до 21:00</p>
+      </div>
     </div>
   </div>
 </nav>
