--- a/templates/all_products.html
+++ b/templates/all_products.html
@@ -1,9 +1,11 @@
 {% extends 'base_template.html' %} {% block content %}
 <div class="container my-5">
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
-    {% for product in products %}
-    <div class="col">{% include 'shop_post_card.html' %}</div>
-    {% endfor %}
+  <div class="container py-5 product-img" style="background-image: url('/static/img/background.jpg')" >
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
+      {% for product in products %}
+      <div class="col">{% include 'shop_post_card.html' %}</div>
+      {% endfor %}
+    </div>
   </div>
 </div>
 {% endblock content %}
